[tool.poetry]
name = "aurishem"
version = "0.1.0"
description = "Safe and Easy way to build and install packages directly from Arch User Repository"
authors = ["coolfool <coolfool149@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
pydbus = "^0.6.0"
PyGObject = "^3.42.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
